# cpp-osx-launchctl

./: .travis.yml  Makefile  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  Makefile  cget-requirements.txt  main.cpp
include/pqrs/osx/: launchctl.hpp
include/pqrs/osx/launchctl/: domain_target.hpp
tests/: cget-requirements.txt
tests/src/: CMakeLists.txt  launchctl_test.cpp  test.cpp
